crates/rattler_build_variant_config/tests/snapshots/integration_tests__conda_build_config_osx.snap
---
source: crates/rattler_build_variant_config/tests/integration_tests.rs
expression: config
---
c_compiler_version:
  - "14"
  - "15"
compiler:
  - gcc
  - clang
python:
  - "3.9"
  - "3.10"
target_platform:
  - osx-64
