crates/rattler_build_variant_config/tests/snapshots/integration_tests__filtered_python_310_combos.snap
---
source: crates/rattler_build_variant_config/tests/integration_tests.rs
expression: combinations
---
- compiler: clang
  python: "3.10"
- compiler: gcc
  python: "3.10"
