crates/rattler_build_variant_config/tests/snapshots/integration_tests__multi_file_combos.snap
---
source: crates/rattler_build_variant_config/tests/integration_tests.rs
expression: combinations
---
- compiler: gcc
  numpy: "1.20"
  python: "3.11"
- compiler: gcc
  numpy: "1.21"
  python: "3.12"
