crates/rattler_build_variant_config/tests/snapshots/integration_tests__parser_selectors_linux.snap
---
source: crates/rattler_build_variant_config/tests/integration_tests.rs
expression: config
---
compiler:
  - gcc
  - clang
filter:
  - appears
foobar:
  - unknown
mixed:
  - static_value
  - linux_only
  - jinja_value
python:
  - "3.14"
  - "3.15"
target:
  - linux-64
